# bazel-angular-ts

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  angular.json  bazel-out  package-lock.json  package.json  tsconfig.json
e2e/src/: app.e2e-spec.ts
src/: BUILD.bazel  index.html  index.ts
src/accordion/: BUILD.bazel  accordion-group.component.html  accordion-group.component.ts  accordion.module.ts
src/app/: app.component.spec.ts  app.component.ts
src/chronos/: BUILD.bazel  public_api.ts  utils.ts
src/chronos/create/: BUILD.bazel
src/chronos/duration/: BUILD.bazel
src/chronos/format/: BUILD.bazel
src/chronos/i18n/: BUILD.bazel
src/chronos/locale/: BUILD.bazel
src/chronos/moment/: BUILD.bazel
src/chronos/parse/: BUILD.bazel
src/chronos/test/: BUILD.bazel  test-helpers.ts
src/chronos/units/: BUILD.bazel
src/chronos/utils/: BUILD.bazel
src/utils/: BUILD.bazel
src/utils/facade/: BUILD.bazel
