load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

package(default_visibility=["//visibility:public"])

# Root "@ngx-bootstrap" entry-point.
ts_library(
  name = "ngx-bootstrap",
  srcs = [
    "index.ts",
  ],
  deps = [
    "@npm//tslib",
    "@npm//@types",
    "@angular//packages/core",
    "//src/accordion:accordion-component-module",
    ":locale"
  ]
)

ts_library(
  name = "locale",
  srcs = ["locale.ts"],
  deps = [
    "@npm//tslib",
    "@npm//@types",
#    "//src/chronos/i18n:chronos-i18n"
  ],
)

# Creates the @ngx-bootstrap package published to npm.
npm_package(
  name = "npm_package",
  srcs = ["//src:package.json"],
  deps = [":ngx-bootstrap"],
  replacements = {"//internal/": "//"},
)
