load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
  name = "accordion-component-module",
  srcs = [
    "accordion.module.ts",
    "accordion.component.ts",
    "accordion-group.component.ts",
    "index.ts",
    "public_api.ts",
    "accordion.config.ts"
  ],
  module_name = "src/accordion",
  tsconfig = "//:tsconfig.json",
  assets = ["accordion-group.component.html"],
  deps = [
    "@npm//tslib",
    "@npm//@types",
    "@angular//packages/core",
    "@angular//packages/common",
    "//src/utils:theme-provider"
  ]
)
