load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
  name = "theme-provider",
  srcs = ["theme-provider.ts"],
  tsconfig = "//:tsconfig.json",
  deps = [
    "@npm//tslib",
    "@npm//@types",
    "//src/utils/facade:browser"
  ]
)
