load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
  name = "chronos-duration-bubble",
  srcs = ["bubble.ts"],
  tsconfig = "//:tsconfig.json",
  deps = [
    "@npm//tslib",
    "@npm//@types",
  ]
)

ts_library(
  name = "chronos-duration-constructor",
  srcs = ["constructor.ts"],
  tsconfig = "//:tsconfig.json",
  deps = [
    "@npm//tslib",
    "@npm//@types",
  ]
)

ts_library(
  name = "chronos-duration-create",
  srcs = ["create.ts"],
  tsconfig = "//:tsconfig.json",
  deps = [
    "@npm//tslib",
    "@npm//@types",
  ]
)

ts_library(
  name = "chronos-duration-humanize",
  srcs = ["humanize.ts"],
  tsconfig = "//:tsconfig.json",
  deps = [
    "@npm//tslib",
    "@npm//@types",
  ]
)

ts_library(
  name = "chronos-duration-valid",
  srcs = ["valid.ts"],
  tsconfig = "//:tsconfig.json",
  deps = [
    "@npm//tslib",
    "@npm//@types",
  ]
)

