load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
  name = "chronos-i18n",
  srcs = glob(["*.ts"]),
  tsconfig = "//:tsconfig.json",
  deps = [
    "@npm//tslib",
    "@npm//@types",
#    "//src/chronos/locale:chronos-locale-class",
  ]
)

#alias(
#    name = "other",
#    actual = ":chronos-i18n",
#)
